usr/local/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "nextcloud.build-hub.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-server
          namespace: nextcloud
          port: 80
